--- a/kaggle_encore_21_competition_trying_1.ipynb
+++ b/kaggle_encore_21_competition_trying_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3788ae00",
+   "id": "aaa10ec6",
    "metadata": {},
    "source": [
     "# encore_21_titanic"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe61c62",
+   "id": "341fb779",
    "metadata": {},
    "source": [
     "### Dataset Description  \n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572db9e5",
+   "id": "58173fc5",
    "metadata": {},
    "source": [
     "### Import Library"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "b7a24bc4",
+   "id": "1b87b720",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3299dd",
+   "id": "44cd70ad",
    "metadata": {},
    "source": [
     "### Global Variables"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "5bd15f90",
+   "id": "1e88292f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96bf1d80",
+   "id": "c8c7f4b0",
    "metadata": {},
    "source": [
     "### Get Train and Test Dataset"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "c828d751",
+   "id": "3883164f",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd925115",
+   "id": "c22b3d1a",
    "metadata": {},
    "source": [
     "##### 컬럼이 차이 나는 이유\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7975cd0f",
+   "id": "341b8285",
    "metadata": {},
    "source": [
     "# Check Dataset Info"
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "aa3aee49",
+   "id": "adf11d67",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "6dd578f4",
+   "id": "884a7ff1",
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 359,
-   "id": "0d213dab",
+   "id": "0155ed47",
    "metadata": {
     "scrolled": false
    },
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "296c97f6",
+   "id": "d120c534",
    "metadata": {
     "scrolled": true
    },
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "526dcc4c",
+   "id": "e36cc7aa",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63830152",
+   "id": "7e9a49ee",
    "metadata": {},
    "source": [
     "# Missing Value Check"
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "835be784",
+   "id": "c1014023",
    "metadata": {},
    "source": [
     "##### org_train heatmap"
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 363,
-   "id": "ad7cf14a",
+   "id": "5ca48b2b",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04017a3b",
+   "id": "03318526",
    "metadata": {},
    "source": [
     "##### org_test heatmap"
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "id": "bb325443",
+   "id": "72a61b2d",
    "metadata": {
     "scrolled": true
    },
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b7d3bd",
+   "id": "fc6a5e22",
    "metadata": {},
    "source": [
     "##### org_train null check"
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "id": "c23c4a41",
+   "id": "691803a0",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1af56edf",
+   "id": "2bc97075",
    "metadata": {},
    "source": [
     "##### org_test null check"
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "id": "faed2cd8",
+   "id": "c525197f",
    "metadata": {
     "scrolled": false
    },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ed6ea7",
+   "id": "1a55e0b2",
    "metadata": {},
    "source": [
     "# Filling Missing Value"
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
-   "id": "4d8532b6",
+   "id": "5478c1ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0426b0f",
+   "id": "a25dae07",
    "metadata": {},
    "source": [
     "##### drop 'cabin' column"
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "9bf53f88",
+   "id": "e4363dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8cc3a5",
+   "id": "0a9d254b",
    "metadata": {},
    "source": [
     "##### Extract Data to fill"
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "5129c134",
+   "id": "19f2592b",
    "metadata": {
     "scrolled": true
    },
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 370,
-   "id": "a30a5c9a",
+   "id": "c8d3f65e",
    "metadata": {
     "scrolled": true
    },
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "id": "f389336f",
+   "id": "c287f6b3",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a137e40c",
+   "id": "d8e1d836",
    "metadata": {},
    "source": [
     "##### Fill with Extracted Data"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "0658ee27",
+   "id": "a7aa2a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "785b9ad0",
+   "id": "4b706244",
    "metadata": {
     "scrolled": true
    },
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "10deaef2",
+   "id": "16b18fad",
    "metadata": {
     "scrolled": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "id": "a183f109",
+   "id": "b5dc5f7b",
    "metadata": {
     "scrolled": false
    },
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 378,
-   "id": "84be7f65",
+   "id": "1754e889",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aa74df23",
+   "id": "c2aaf9e2",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1742ebd2",
+   "id": "1c28edce",
    "metadata": {},
    "source": [
     "# Midterm check"
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "id": "e4b89d34",
+   "id": "397eb0e1",
    "metadata": {
     "scrolled": true
    },
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 380,
-   "id": "dc76e04b",
+   "id": "28ebccf7",
    "metadata": {
     "scrolled": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "id": "6ffade41",
+   "id": "714519cf",
    "metadata": {
     "scrolled": true
    },
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1c205c63",
+   "id": "4759ab47",
    "metadata": {
     "scrolled": false
    },
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ece93cbb",
+   "id": "556f3496",
    "metadata": {},
    "source": [
     "# EDA - Preprocessing"
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "id": "3ebed2ea",
+   "id": "cf1063c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "ae5c6390",
+   "id": "0f6b02f2",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a5fdb4",
+   "id": "fa27cb38",
    "metadata": {},
    "source": [
     "##### Reform 'gender' column"
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": 384,
-   "id": "d51d2a5f",
+   "id": "4292b2fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce72dee",
+   "id": "dfb5e868",
    "metadata": {},
    "source": [
     "##### Add 'designation' column"
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "id": "a19930b3",
+   "id": "2373c7e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf24547",
+   "id": "f79b894e",
    "metadata": {},
    "source": [
     "##### Reform 'embarked' column"
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 386,
-   "id": "9b810cf7",
+   "id": "d83acd0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6324eb3",
+   "id": "d1021cb3",
    "metadata": {},
    "source": [
     "##### Add 'sub_age' column"
@@ -1488,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "7393e526",
+   "id": "407c3766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c7f10e",
+   "id": "fae6c38f",
    "metadata": {},
    "source": [
     "##### Add 'survived_by_pclass' and 'len_sibsp_by_pclass' and 'len_parch_by_pclass' column"
@@ -1507,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 455,
-   "id": "ea430ea9",
+   "id": "70a9d051",
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "id": "eb47dceb",
+   "id": "aaa98649",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce81b67",
+   "id": "083c6a45",
    "metadata": {},
    "source": [
     "##### Add Age Group"
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16540e22",
+   "id": "2d81ba69",
    "metadata": {},
    "source": [
     "- 영유아 : 0~17\n",
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "id": "b77d3ff7",
+   "id": "b69ac91c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "id": "273e7804",
+   "id": "47192f11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "f074f4ce",
+   "id": "e2729ecf",
    "metadata": {
     "scrolled": false
    },
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "818e4ba9",
+   "id": "0bb151bc",
    "metadata": {
     "scrolled": false
    },
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8135b5d4",
+   "id": "996ff19f",
    "metadata": {},
    "source": [
     "### Un necessary columns removed\n",
@@ -1779,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "a9c91cd5",
+   "id": "96a1527c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "b7d9f2f1",
+   "id": "f927ccf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "9ab8b876",
+   "id": "17c43065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1812,7 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "7ae90ba5",
+   "id": "f1963af3",
    "metadata": {
     "scrolled": false
    },
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "6a07e4b2",
+   "id": "1fb547c9",
    "metadata": {
     "scrolled": true
    },
@@ -2005,7 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 429,
-   "id": "b7b1b4fb",
+   "id": "c6b8e6ac",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "2bf4546d",
+   "id": "9c132bee",
    "metadata": {
     "scrolled": false
    },
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 431,
-   "id": "c72157c2",
+   "id": "ce93a87d",
    "metadata": {
     "scrolled": false
    },
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51410f7",
+   "id": "a9ecbbbe",
    "metadata": {},
    "source": [
     "### Model Set"
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a1751d",
+   "id": "c6a34fc0",
    "metadata": {},
    "source": [
     "##### Import Library"
@@ -2134,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 432,
-   "id": "4be0a82f",
+   "id": "b46c207d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2143,7 +2143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeecc767",
+   "id": "2815ad78",
    "metadata": {},
    "source": [
     "##### Split dataset"
@@ -2152,7 +2152,7 @@
   {
    "cell_type": "code",
    "execution_count": 433,
-   "id": "75584b41",
+   "id": "0ce430a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "f92fe013",
+   "id": "e7a77aa1",
    "metadata": {
     "scrolled": true
    },
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 435,
-   "id": "7eeb1820",
+   "id": "25f132ea",
    "metadata": {
     "scrolled": true
    },
@@ -2213,7 +2213,7 @@
   {
    "cell_type": "code",
    "execution_count": 436,
-   "id": "5ef3f1b7",
+   "id": "c9fbebcb",
    "metadata": {
     "scrolled": true
    },
@@ -2360,14 +2360,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4673b6de",
+   "id": "dbac6481",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "dfce5e99",
+   "id": "abea9abf",
    "metadata": {},
    "source": [
     "### DecisionTree"
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12b1583",
+   "id": "c23f49a5",
    "metadata": {},
    "source": [
     "### auc test\n",
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 437,
-   "id": "f1aefd7a",
+   "id": "272f4049",
    "metadata": {},
    "outputs": [
     {
@@ -2438,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": 438,
-   "id": "7cf10745",
+   "id": "f0d5590e",
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf350cb",
+   "id": "8a5f58d2",
    "metadata": {},
    "source": [
     "##### Test Prediction"
@@ -2473,7 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 439,
-   "id": "3ac8bbb3",
+   "id": "dc0e48e8",
    "metadata": {
     "scrolled": true
    },
@@ -2507,7 +2507,7 @@
   {
    "cell_type": "code",
    "execution_count": 440,
-   "id": "bc773b73",
+   "id": "ceab751a",
    "metadata": {
     "scrolled": false
    },
@@ -2530,7 +2530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4427548c",
+   "id": "e999a3ce",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a810e9",
+   "id": "69ba3875",
    "metadata": {},
    "source": [
     "### acu test\n",
@@ -2551,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 441,
-   "id": "d595d8b0",
+   "id": "f592db30",
    "metadata": {},
    "outputs": [
     {
@@ -2582,7 +2582,7 @@
   {
    "cell_type": "code",
    "execution_count": 442,
-   "id": "37dfb5a3",
+   "id": "82bb362b",
    "metadata": {},
    "outputs": [
     {
@@ -2609,7 +2609,7 @@
   {
    "cell_type": "code",
    "execution_count": 443,
-   "id": "2bfecc83",
+   "id": "fce80b1c",
    "metadata": {},
    "outputs": [
     {
@@ -2631,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 444,
-   "id": "5f8ac056",
+   "id": "cce09db4",
    "metadata": {
     "scrolled": true
    },
@@ -2654,7 +2654,7 @@
   {
    "cell_type": "code",
    "execution_count": 445,
-   "id": "fb6056cd",
+   "id": "540163ac",
    "metadata": {
     "scrolled": true
    },
@@ -2744,7 +2744,7 @@
   {
    "cell_type": "code",
    "execution_count": 446,
-   "id": "a0e0a924",
+   "id": "180a27ae",
    "metadata": {
     "scrolled": true
    },
@@ -2826,7 +2826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26800959",
+   "id": "deb617bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2836,14 +2836,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3614a2a6",
+   "id": "d6a673c0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0450b883",
+   "id": "af6fb277",
    "metadata": {},
    "source": [
     "### Gradient Boosting Classifier"
@@ -2851,7 +2851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9721fdc",
+   "id": "a04dfffe",
    "metadata": {},
    "source": [
     "### acu test\n",
@@ -2864,7 +2864,7 @@
   {
    "cell_type": "code",
    "execution_count": 447,
-   "id": "218500e5",
+   "id": "f0a32e4a",
    "metadata": {},
    "outputs": [
     {
@@ -2895,7 +2895,7 @@
   {
    "cell_type": "code",
    "execution_count": 448,
-   "id": "de5f219b",
+   "id": "6bfd2efd",
    "metadata": {},
    "outputs": [
     {
@@ -2922,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": 449,
-   "id": "ee7919e8",
+   "id": "93055751",
    "metadata": {},
    "outputs": [
     {
@@ -2943,7 +2943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536e4de0",
+   "id": "6196647d",
    "metadata": {},
    "source": [
     "### Logistic Regression"
@@ -2952,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 450,
-   "id": "afbbeef4",
+   "id": "06c36d8b",
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
   {
    "cell_type": "code",
    "execution_count": 451,
-   "id": "ed78d3d5",
+   "id": "25b5516d",
    "metadata": {},
    "outputs": [
     {
@@ -3011,7 +3011,7 @@
   {
    "cell_type": "code",
    "execution_count": 452,
-   "id": "1483fcef",
+   "id": "7c91f2f2",
    "metadata": {},
    "outputs": [
     {
@@ -3033,7 +3033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d03907e",
+   "id": "9dcacc67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3041,7 +3041,7 @@
   {
    "cell_type": "code",
    "execution_count": 453,
-   "id": "84cbcf45",
+   "id": "6da253d6",
    "metadata": {},
    "outputs": [
     {
@@ -3070,7 +3070,7 @@
   {
    "cell_type": "code",
    "execution_count": 454,
-   "id": "54940247",
+   "id": "97fd6463",
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965a9af7",
+   "id": "851057a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3100,7 +3100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3115,6 +3115,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
