--- a/kaggle_encore_21_titanic.ipynb
+++ b/kaggle_encore_21_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aca4f30f",
+   "id": "e89ccbe9",
    "metadata": {},
    "source": [
     "# encore_21_titanic"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6e63ffc",
+   "id": "17bc854c",
    "metadata": {},
    "source": [
     "### Dataset Description  \n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7806ee0",
+   "id": "b2eb9219",
    "metadata": {},
    "source": [
     "### Import Library"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a635529",
+   "id": "1376a20e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b79aca2f",
+   "id": "15aa69c6",
    "metadata": {},
    "source": [
     "### Global Variables"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cfa55f2b",
+   "id": "9be919c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c993514",
+   "id": "4b18c61d",
    "metadata": {},
    "source": [
     "### Get Train and Test Dataset"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dac2e19a",
+   "id": "6c0b4887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "baf4d8d0",
+   "id": "d676925c",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "af66f907",
+   "id": "4a2b265a",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c5fdc86",
+   "id": "0275ae20",
    "metadata": {},
    "source": [
     "### Check Dataset Info"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c75513c6",
+   "id": "05242d03",
    "metadata": {
     "scrolled": true
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c0e642",
+   "id": "6f17c265",
    "metadata": {},
    "source": [
     "train 과 test 의 컬럼 수가 1 차이남  \n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22d4c681",
+   "id": "71b7059d",
    "metadata": {
     "scrolled": false
    },
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5b7ffbec",
+   "id": "e40580f0",
    "metadata": {
     "scrolled": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3165373",
+   "id": "3c447a0b",
    "metadata": {},
    "source": [
     "### Check unique for 'passengerid' column"
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0dedb76f",
+   "id": "6b1b7c65",
    "metadata": {
     "scrolled": true
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38af4ffc",
+   "id": "cd00ae93",
    "metadata": {},
    "source": [
     "### Missing Value Check"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525edc04",
+   "id": "d6c6e568",
    "metadata": {},
    "source": [
     "##### org_train heatmap"
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "305ffbe4",
+   "id": "fb94a485",
    "metadata": {
     "scrolled": false
    },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc1a0775",
+   "id": "47df6e6b",
    "metadata": {},
    "source": [
     "##### org_test heatmap"
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "46f02a50",
+   "id": "e4f50380",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7790fb94",
+   "id": "428ca5fa",
    "metadata": {},
    "source": [
     "##### org_train null check"
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2627ee4c",
+   "id": "7c0b10ab",
    "metadata": {
     "scrolled": false
    },
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2db2ab33",
+   "id": "2ef367d8",
    "metadata": {
     "scrolled": true
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca2aa6e",
+   "id": "262b5da2",
    "metadata": {},
    "source": [
     "##### org_test null check"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "59cff6e2",
+   "id": "d4b25e84",
    "metadata": {
     "scrolled": true
    },
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a39c6e01",
+   "id": "9278c9c4",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5019222",
+   "id": "d135425e",
    "metadata": {},
    "source": [
     "### Filling Missing Value"
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2cf0cfab",
+   "id": "3e3cee95",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ba285f",
+   "id": "aaae33dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1e76287",
+   "id": "167726c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -648,14 +648,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0e9179",
+   "id": "c8e4ddee",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "674a02af",
+   "id": "e0aa65a2",
    "metadata": {},
    "source": [
     "### Drop column"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4b012e3f",
+   "id": "8f1b4285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18c4c92a",
+   "id": "7f11e2fc",
    "metadata": {},
    "source": [
     "### Fill na"
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e80de6a",
+   "id": "3267c635",
    "metadata": {},
    "source": [
     "##### age"
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9de9084e",
+   "id": "69fcf8af",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "23b45def",
+   "id": "f50834a9",
    "metadata": {
     "scrolled": true
    },
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5c9170a8",
+   "id": "79498a97",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d36d035",
+   "id": "f7a38e38",
    "metadata": {},
    "source": [
     "##### embarked"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "602def54",
+   "id": "eda1e178",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aed4fdcc",
+   "id": "7b087afa",
    "metadata": {
     "scrolled": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e3ed499c",
+   "id": "b915eed6",
    "metadata": {
     "scrolled": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e52adcd",
+   "id": "f32ddf85",
    "metadata": {},
    "source": [
     "#### Check result"
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "100fe4d7",
+   "id": "b608abe8",
    "metadata": {
     "scrolled": false
    },
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8244e557",
+   "id": "a571e66d",
    "metadata": {},
    "source": [
     "### Preprocessing"
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b0f4967c",
+   "id": "f0e8b7c3",
    "metadata": {
     "scrolled": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "239a782a",
+   "id": "ffbbcee4",
    "metadata": {
     "scrolled": true
    },
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fa17783f",
+   "id": "b91cc669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1e01b046",
+   "id": "5b89825d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "24576e45",
+   "id": "76f4e077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c6cf18a8",
+   "id": "d0ffbd2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e481f449",
+   "id": "03389fd5",
    "metadata": {
     "scrolled": true
    },
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f955e13c",
+   "id": "ef2812fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5974bb62",
+   "id": "c315380e",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "952b0d83",
+   "id": "14a682f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2141d1ee",
+   "id": "bbd8c277",
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ae577a1c",
+   "id": "f1069622",
    "metadata": {
     "scrolled": false
    },
@@ -1449,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "553db427",
+   "id": "0b399575",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "cc04e8b2",
+   "id": "0a9c8d5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "038daba4",
+   "id": "b2ddbe4e",
    "metadata": {
     "scrolled": true
    },
@@ -1768,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ff02eec3",
+   "id": "5713eae8",
    "metadata": {
     "scrolled": false
    },
@@ -1807,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "165961e8",
+   "id": "6382e87b",
    "metadata": {
     "scrolled": false
    },
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc4f13c",
+   "id": "dd3f4535",
    "metadata": {},
    "source": [
     "### Aggregation"
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026204b5",
+   "id": "770720ad",
    "metadata": {},
    "source": [
     "##### pivot table"
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3fee3dcd",
+   "id": "f3257e21",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "abfd54b6",
+   "id": "29050cb0",
    "metadata": {
     "scrolled": true
    },
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6d74691",
+   "id": "c3de7c69",
    "metadata": {},
    "source": [
     "##### group"
@@ -2130,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c9d6f036",
+   "id": "c62125c8",
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2210,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9aad0ca4",
+   "id": "9321ffe0",
    "metadata": {
     "scrolled": true
    },
@@ -2424,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1bde346e",
+   "id": "efd97e92",
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2462,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4a78416f",
+   "id": "482746bf",
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2500,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2204450b",
+   "id": "63aeb015",
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2524,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b1e28d87",
+   "id": "228bacd9",
    "metadata": {
     "scrolled": false
    },
@@ -2731,7 +2731,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1538fe90",
+   "id": "95c62bfe",
    "metadata": {},
    "outputs": [
     {
@@ -2760,7 +2760,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7c621c71",
+   "id": "f055621c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2781,7 +2781,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "bc9d1052",
+   "id": "9733f9a2",
    "metadata": {
     "scrolled": true
    },
@@ -2992,7 +2992,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e0efc58a",
+   "id": "9917a47f",
    "metadata": {},
    "outputs": [
     {
@@ -3366,7 +3366,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b041f408",
+   "id": "d9a1794f",
    "metadata": {
     "scrolled": false
    },
@@ -3389,7 +3389,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "dd3a6f96",
+   "id": "12087367",
    "metadata": {},
    "outputs": [
     {
@@ -3410,7 +3410,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7454f7ad",
+   "id": "a0bdd811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3423,7 +3423,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6a462a1e",
+   "id": "b5d84977",
    "metadata": {
     "scrolled": false
    },
@@ -3634,7 +3634,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "591c4412",
+   "id": "819b67ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3647,7 +3647,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2ebde40c",
+   "id": "4cb55fc3",
    "metadata": {},
    "outputs": [
     {
@@ -3856,14 +3856,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c55c44",
+   "id": "f19a9839",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e7d34ca0",
+   "id": "cb0f1c67",
    "metadata": {},
    "source": [
     "### Remove columes"
@@ -3872,7 +3872,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "de95c8aa",
+   "id": "df590046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3883,7 +3883,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9d7ee749",
+   "id": "8e0a1328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3894,7 +3894,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b5088e6d",
+   "id": "4bcbfeb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3905,7 +3905,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "be956551",
+   "id": "63b1dad5",
    "metadata": {},
    "outputs": [
     {
@@ -4081,7 +4081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e2ad5b",
+   "id": "80e8e131",
    "metadata": {},
    "source": [
     "### Model"
@@ -4090,7 +4090,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "51633981",
+   "id": "e66696be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4105,7 +4105,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d9de073d",
+   "id": "dfed5fc1",
    "metadata": {},
    "outputs": [
     {
@@ -4142,7 +4142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d370a7",
+   "id": "7c420569",
    "metadata": {},
    "source": [
     "### DecisionTree"
@@ -4151,7 +4151,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9f9f33e1",
+   "id": "3175732f",
    "metadata": {},
    "outputs": [
     {
@@ -4328,7 +4328,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9330fbb4",
+   "id": "6e2c5c5c",
    "metadata": {},
    "outputs": [
     {
@@ -4360,7 +4360,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5ad2aac0",
+   "id": "4242e506",
    "metadata": {},
    "outputs": [
     {
@@ -4391,7 +4391,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3cc95880",
+   "id": "9aa27cca",
    "metadata": {},
    "outputs": [
     {
@@ -4422,7 +4422,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b8f83c16",
+   "id": "00f6f9e4",
    "metadata": {},
    "outputs": [
     {
@@ -4451,7 +4451,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "32c435e4",
+   "id": "855cf08e",
    "metadata": {},
    "outputs": [
     {
@@ -4478,7 +4478,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "045e6896",
+   "id": "c3af254b",
    "metadata": {},
    "outputs": [
     {
@@ -4516,7 +4516,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7ba03089",
+   "id": "e759e430",
    "metadata": {},
    "outputs": [
     {
@@ -4542,7 +4542,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "6328973d",
+   "id": "1a026455",
    "metadata": {},
    "outputs": [
     {
@@ -4568,7 +4568,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b618a2c6",
+   "id": "5af07d4c",
    "metadata": {},
    "outputs": [
     {
@@ -4594,7 +4594,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6b094d66",
+   "id": "64e32c54",
    "metadata": {},
    "outputs": [
     {
@@ -4623,7 +4623,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "39150235",
+   "id": "d70cab62",
    "metadata": {
     "scrolled": true
    },
@@ -4741,7 +4741,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a907ca8c",
+   "id": "0a496b75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4755,7 +4755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4770,6 +4770,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
